# KiroStudio

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  config.docker.example.json  config.example.json  docker-compose.yml  install-binary.sh  install.sh
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml
admin-ui/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
admin-ui/src/: App.tsx  index.css  main.tsx
deploy/: bluegreen.sh  deploy.sh  install-service.sh  rollback-guard.sh
deploy/windows/: build.bat  run.bat  start.bat  start.ps1  update.bat
docs/: ARCHITECTURE.md  ATTACK-REPORT-invalid-tool-params-0713night.md  DEPLOY-WINDOWS.md  ENGINE.md  FEATURES.md  I18N-RESIDUAL-FOR-GROK.md  I18N-TASK-FOR-GROK.md  INVALID-TOOL-PARAMETERS.md  LOGIN.md  MODULES.md  OUTLINE.md  PLAN.md  PROTOCOL.md  README.md  RESILIENCE.md  UI-COMPONENTS.md  VERIFY-tool-tolerance-completeness-0713night.md  WINDOWS-BOOTSTRAP-PLAN.md
research/: ECOSYSTEM.md
src/: http_client.rs  main.rs  test.rs  token.rs  tray.rs
src/admin/: error.rs  external_idp_login.rs  handlers.rs  idc_login.rs  middleware.rs  mod.rs  router.rs  service.rs  social_login.rs  types.rs  update.rs  usage_handlers.rs
src/admin_ui/: mod.rs  router.rs
src/anthropic/: cache_tracker.rs  compressor.rs  converter.rs  handlers.rs  middleware.rs  mod.rs  model_catalog.rs  router.rs  stream.rs  types.rs  websearch.rs
src/common/: auth.rs  fs_atomic.rs  health_marker.rs  log_buffer.rs  mod.rs  recovery_metrics.rs  secret_store.rs  security.rs  ssrf.rs
src/kiro/: affinity.rs  cooldown.rs  diagnosis.rs  health.rs  machine_id.rs  mod.rs  overage.rs  passthrough.rs  provider.rs  rate_limiter.rs  refresh_loop.rs  regions.rs  scheduling.rs  throttle.rs  token_manager.rs  web_portal.rs
src/model/: config.rs
src/openai/: convert.rs  handlers.rs  mod.rs  types.rs
src/usage/: mod.rs  pipeline.rs  record.rs  trace_db.rs  (+1 more)
(+89 files in other folders)
