[package]
name = "kirostudio"
version = "0.7.6"
edition = "2024"

[features]
default = ["native-tls"]
native-tls = ["reqwest/native-tls-vendored"]

[profile.release]
lto = true
strip = true

[dependencies]
axum = "0.8"
arc-swap = "1"  # 配置热重载：Config 存 ArcSwap,改配置原子热切、读端无锁近零成本
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["stream", "json", "socks", "rustls-tls-webpki-roots", "rustls-tls-native-roots", "http2", "system-proxy", "charset"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_cbor = "0.11"  # Kiro Web Portal (app.kiro.dev) 走 rpc-v2-cbor 协议，overage 开关需要
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
http = "1.0"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["v1", "v4", "fast-rng"] }
fastrand = "2"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"     # PDF document 块 base64 解码（提取文本给上游）
crc = "3"           # CRC32C 计算
bytes = "1"         # 高效的字节缓冲区
tower-http = { version = "0.6", features = ["cors"] }
clap = { version = "4.5", features = ["derive"] }
urlencoding = "2"
parking_lot = "0.12"  # 高性能同步原语
subtle = "2.6"        # 常量时间比较（防止时序攻击）
rust-embed = "8"      # 嵌入静态文件
mime_guess = "2"      # MIME 类型推断
rusqlite = { version = "0.40.1", features = ["bundled"] }

# ============================================================================
# Windows 专属：系统托盘（图标 + 右键菜单：打开网页/复制密钥/重启/版本/退出）。
# 仅 Windows target 编译时拉取，Linux/macOS 不受影响（编译时间/二进制不变）。
# ============================================================================
[target.'cfg(windows)'.dependencies]
tray-icon = "0.21"   # 系统托盘图标 + muda 菜单（tauri-apps 官方，win32 消息循环）
resvg = "0.45"       # 运行时把内嵌 svg 渲染成 RGBA 喂给 tray-icon（无外部转换工具依赖）
arboard = "3"        # 复制 adminApiKey 到剪贴板
windows-sys = { version = "0.59", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation"] }  # win32 消息循环 GetMessageW
